test/functional/failtests/typeChecking/undefinedParamType.txt
TypeError: Could not resolve type "double"
1 | func foo(double:x) {
  |          ^ (1:10)
2 |     # noop

